solve word count bug,add copy button,button disable function added,shifting problem due to alert solved

--- a/src/Components/Body.css
+++ b/src/Components/Body.css
@@ -26,5 +26,10 @@ h3{
 
 .alert{
     margin:0px;
-    background-color:#bfbfbf;
+    position:fixed;
+    top:60px;
+    width:100%;
+
+
+
 }
